REPO-722 Fixed issues reported by Sonar. Code was reviewed together with Mathijs so no additional review needed.